Import of TVIGNAUD/URPM-4.10 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      4.10
gitpan-cpan-path:         TVIGNAUD/URPM-4.10.tar.gz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 4.10 - 29 June 2012
+
+- really enable to traverse rpm db by fullname
+
 Version 4.9 - 25 June 2012
 
 - fix setting rflags on packages (mga#6532)
