--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 4.15.1 - 11 October 2012
+
+- drop support for repackage (non working since rpm-4.6 in 2009)
+
 Version 4.15 - 26 September 2012
 
 - API:
