Import of TVIGNAUD/URPM-4.16 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      4.16
gitpan-cpan-path:         TVIGNAUD/URPM-4.16.tar.gz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 4.16 - 16 November 2012
+
+- prevent urpmi from looping forever when some packages are broken
+
 Version 4.15.1 - 11 October 2012
 
 - drop support for repackage (non working since rpm-4.6 in 2009)
