--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 4.18 - 21 November 2012
+
+- further bump threshold for detecting looping forever
+- workaround a segfault (mga#8158)
+
 Version 4.17 - 19 November 2012
 
 - bump threshold for detecting looping forever (mga#8106)
