--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-Version 4.18 - 2 - 2 December 2012
+Version 4.20 - 3 December 2012
+
+- fix a rare segfault
+
+Version 4.19 - 2 December 2012
 
 - kill pkg->disttag (unused, introduced for rpm5 prior to the fork)
 - reduce code size
