Import of TVIGNAUD/URPM-4.21.1 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      4.21.1
gitpan-cpan-path:         TVIGNAUD/URPM-4.21.1.tar.gz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 4.21.1 - 7 December 2012
+
+- fix EVR() on packages from rpmdb (was ok on synthesis ones) (mga#7739)
+
 Version 4.21 - 4 December 2012
 
 - prefer package from first medium when same NEVR exists in several media
