Import of TVIGNAUD/URPM-4.26 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      4.26
gitpan-cpan-path:         TVIGNAUD/URPM-4.26.tgz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 4.26 - 9 February 2013
+
+- add basic support for --downgrade (mga#6655)
+
 Version 4.25 - 5 February 2013
 
 - fix retrieving payload format
