Import of TVIGNAUD/URPM-4.28 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      4.28
gitpan-cpan-path:         TVIGNAUD/URPM-4.28.tar.gz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 4.28 - 3 October 2013
+
+- adapt to perl-5.18 random hash keys ordering
+  now find_required_package() always sort matching packages  by their names
+  before sorting them by arch and score
+- coverity fixes
+
 Version 4.27 - 22 March 2013
 
 - fix selecting right DKMS flavor (mga#9172)
