Import of TVIGNAUD/URPM-4.30 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      4.30
gitpan-cpan-path:         TVIGNAUD/URPM-4.30.tgz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 4.30 - 1 May 2014
+
+- fix 64k size limit on provides size that break installing 32 bit kernel for
+  drakx-installer-binaries
 - fix a warning in debug mode
 
 Version 4.29 - 5 November 2013
