Import of TVIGNAUD/URPM-5.01 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      5.01
gitpan-cpan-path:         TVIGNAUD/URPM-5.01.tgz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 5.01 - 23 October 2014
+
+- fix crashing in ptread when using log callback with rpm-4.12
+
 Version 5.00 - 12 September 2014
 
 - make it compatible with rpm-4.12.0
